--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                     </div>
                 </div>
                 <div class="main_content_block1">
-                    <img src="img/space_walking.png" alt="space_walking">
+                    <img class="main_big_photo" src="img/space_walking.png" alt="space_walking">
+                    <img class="main_mini_photo" src="img/space_walking_mini.png" alt="space_walking_mini">
                     <div class="main_img">
                         <p>Space Walking</p>
                         <div>
@@ -103,7 +104,7 @@
                             </div>
                         </div>
                     </div>
-                    <div>
+                    <div class="trending_media_none">
                         <img src="img/trending_photo3.png" alt="trending_photo3">
                         <div class="dsgn_animals_flex">
                             <img src="img/collection_photo5.png" alt="collection_photo5">
@@ -138,78 +139,80 @@
                         <div>
                             <p class="creators_position">1</p>
                             <img src="img/top_creators1.png" alt="top_creators1">
-                            <p>Keepitreal</p>
-                            <p>Total Sales: <span>34.53 ETH</span></p>
+                            <p class="creators_title">Keepitreal</p>
+                            <p class="creators_description">Total Sales: <span>34.53 ETH</span></p>
                         </div>
                         <div>
                             <p class="creators_position">2</p>
                             <img src="img/top_creators2.png" alt="top_creators2">
-                            <p>DigiLab</p>
-                            <p>Total Sales: <span>34.53 ETH</span></p>
+                            <p class="creators_title">DigiLab</p>
+                            <p class="creators_description">Total Sales: <span>34.53 ETH</span></p>
                         </div>
                         <div>
                             <p class="creators_position">3</p>
                             <img src="img/top_creators3.png" alt="top_creators3">
-                            <p>GravityOne</p>
-                            <p>Total Sales: <span>34.53 ETH</span></p>
+                            <p class="creators_title">GravityOne</p>
+                            <p class="creators_description">Total Sales: <span>34.53 ETH</span></p>
                         </div>
                         <div>
                             <p class="creators_position">4</p>
                             <img src="img/top_creators4.png" alt="top_creators4">
-                            <p>Juanie</p>
-                            <p>Total Sales: <span>34.53 ETH</span></p>
+                            <p class="creators_title">Juanie</p>
+                            <p class="creators_description">Total Sales: <span>34.53 ETH</span></p>
                         </div>
                     </div>    
                     <div class="creators_content_flex">
                         <div>
-                            <p class="creators_position">5</p>
+                            <p class="creators_position1">5</p>
+                            <p class="creators_position2">3</p>
                             <img src="img/top_creators5.png" alt="top_creators5">
-                            <p>BlueWhale</p>
-                            <p>Total Sales: <span>34.53 ETH</span></p>
+                            <p class="creators_title">BlueWhale</p>
+                            <p class="creators_description">Total Sales: <span>34.53 ETH</span></p>
                         </div>
                         <div>
-                            <p class="creators_position">6</p>
+                            <p class="creators_position1">6</p>
+                            <p class="creators_position2">4</p>
                             <img src="img/top_creators6.png" alt="top_creators6">
-                            <p>Mr fox</p>
-                            <p>Total Sales: <span>34.53 ETH</span></p>
+                            <p class="creators_title">Mr fox</p>
+                            <p class="creators_description">Total Sales: <span>34.53 ETH</span></p>
                         </div>
                         <div>
                             <p class="creators_position">7</p>
                             <img src="img/top_creators7.png" alt="top_creators7">
-                            <p>Shroomie</p>
-                            <p>Total Sales: <span>34.53 ETH</span></p>
+                            <p class="creators_title">Shroomie</p>
+                            <p class="creators_description">Total Sales: <span>34.53 ETH</span></p>
                         </div>
                         <div>
                             <p class="creators_position">8</p>
                             <img src="img/top_creators8.png" alt="top_creators8">
-                            <p>Robotica</p>
-                            <p>Total Sales: <span>34.53 ETH</span></p>
+                            <p class="creators_title">Robotica</p>
+                            <p class="creators_description">Total Sales: <span>34.53 ETH</span></p>
                         </div>
                     </div>
                     <div class="creators_content_flex">
                         <div>
                             <p class="creators_position">9</p>
                             <img src="img/top_creators9.png" alt="top_creators9">
-                            <p>RustyRobot</p>
-                            <p>Total Sales: <span>34.53 ETH</span></p>
+                            <p class="creators_title">RustyRobot</p>
+                            <p class="creators_description">Total Sales: <span>34.53 ETH</span></p>
                         </div>
                         <div>
                             <p class="creators_position">10</p>
                             <img src="img/top_creators10.png" alt="top_creators10">
-                            <p>Animakid</p>
-                            <p>Total Sales: <span>34.53 ETH</span></p>
+                            <p class="creators_title">Animakid</p>
+                            <p class="creators_description">Total Sales: <span>34.53 ETH</span></p>
                         </div>
                         <div>
                             <p class="creators_position">11</p>
                             <img src="img/top_creators11.png" alt="top_creators11">
-                            <p>Dotgu</p>
-                            <p>Total Sales: <span>34.53 ETH</span></p>
+                            <p class="creators_title">Dotgu</p>
+                            <p class="creators_description">Total Sales: <span>34.53 ETH</span></p>
                         </div>
                         <div>
                             <p class="creators_position">12</p>
                             <img src="img/top_creators12.png" alt="top_creators12">
-                            <p>Ghiblier</p>
-                            <p>Total Sales: <span>34.53 ETH</span></p>
+                            <p class="creators_title">Ghiblier</p>
+                            <p class="creators_description">Total Sales: <span>34.53 ETH</span></p>
                         </div>
                     </div>
                 </div>
@@ -385,6 +388,7 @@
                         <input class="input" placeholder="Enter your email here">
                         <button class="button_email"><img src="img/button_email.svg" alt="button_email">Subscribe</button>
                     </form>
+                    <button class="button_email_media"><img src="img/button_email.svg" alt="button_email">Subscribe</button>
                 </div>
             </div>
         </div>
