--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main class="main">
         <div class="container">
             <div class="main_content">
-                <div class="main_content_block1">
+                <div class="main_content_block">
                     <div class="main_text1">
                         <h1>Discover<br>digital art &<br>Collect NFTs</h1>
                         <p>NFT marketplace UI created with Anima for<br>Figma. Collect, buy and sell art from more<br>than 20k NFT artists.</p>
@@ -89,7 +89,7 @@
                             </div>
                         </div>
                     </div>
-                    <div>
+                    <div class="trending_media_none1">
                         <img src="img/trending_photo2.png" alt="trending_photo2">
                         <div class="dsgn_animals_flex">
                             <img src="img/collection_photo2.png" alt="collection_photo2">
@@ -399,7 +399,7 @@
             <div class="footer_content">
                 <div class="footer_flex">
                     <div class="one_content_flex">
-                        <a class="header_logo" href="#"><img src="img/logo.svg" alt="logo">NFT Marketplace</a>
+                        <p>NFT Marketplace</p>
                         <p>NFT marketplace UI created<br>with Anima for Figma.</p>
                         <p>Join our community</p>
                         <div class="content_flex_img">
@@ -410,18 +410,19 @@
                         </div>
                     </div>
                     <div class="two_content_flex">
-                        <a class="header_logo" href="#"><img src="img/logo.svg" alt="logo">Explore</a>
+                        <p>Explore</p>
                         <p>Marketplace</p>
                         <p>Rankings</p>
                         <p>Connect a wallet</p>
                     </div>
                     <div class="three_content_flex">
-                        <a class="header_logo" href="#"><img src="img/logo.svg" alt="logo">Join our weekly digest</a>
+                        <p>Join our weekly digest</p>
                         <p>Get exclusive promotions & updates<br>straight to your inbox.</p>
                         <form class="footer_form">
                             <input placeholder="Enter your email here">
                             <button>Subscribe</button>
                         </form>
+                        <button class="footer_email_media"><img src="img/button_email.svg" alt="button_email">Subscribe</button>
                     </div>
                 </div>
                 <p class="unicode_footer">&copy; NFT Market. Use this template freely.</p>
